--- a/Kode_til_mappeoppgave_2_daniel.ipynb
+++ b/Kode_til_mappeoppgave_2_daniel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2175,
+   "execution_count": 783,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2176,
+   "execution_count": 784,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "q_o*(-0.0166666666666667*q_c - 0.0166666666666667*q_o + 940)"
       ]
      },
-     "execution_count": 2176,
+     "execution_count": 784,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2177,
+   "execution_count": 785,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "-0.0333333333333333*q_c - 0.0166666666666667*q_o + 940"
       ]
      },
-     "execution_count": 2177,
+     "execution_count": 785,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2178,
+   "execution_count": 786,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "28200.0 - 0.5*q_o"
       ]
      },
-     "execution_count": 2178,
+     "execution_count": 786,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2179,
+   "execution_count": 787,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "470.0 - 0.0166666666666667*q_o"
       ]
      },
-     "execution_count": 2179,
+     "execution_count": 787,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2180,
+   "execution_count": 788,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "28200.0000000000"
       ]
      },
-     "execution_count": 2180,
+     "execution_count": 788,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2181,
+   "execution_count": 789,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "14100.0000000000"
       ]
      },
-     "execution_count": 2181,
+     "execution_count": 789,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2182,
+   "execution_count": 790,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2183,
+   "execution_count": 791,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "285.000000000000"
       ]
      },
-     "execution_count": 2183,
+     "execution_count": 791,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2184,
+   "execution_count": 792,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "3627000.00000000"
       ]
      },
-     "execution_count": 2184,
+     "execution_count": 792,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2185,
+   "execution_count": 793,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2186,
+   "execution_count": 794,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "313500.000000000"
       ]
      },
-     "execution_count": 2186,
+     "execution_count": 794,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2187,
+   "execution_count": 795,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2188,
+   "execution_count": 796,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "(28200.0, 14100.0)"
       ]
      },
-     "execution_count": 2188,
+     "execution_count": 796,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2189,
+   "execution_count": 797,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,30 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2190,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle q_{1} \\left(- 0.0166666666666667 q_{1} - 0.0166666666666667 q_{2} + 940\\right)$"
-      ],
-      "text/plain": [
-       "q1*(-0.0166666666666667*q1 - 0.0166666666666667*q2 + 940)"
-      ]
-     },
-     "execution_count": 2190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "profit(q1,q2,c,a,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2191,
+   "execution_count": 798,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2192,
+   "execution_count": 799,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +378,7 @@
        "18800.0000000000"
       ]
      },
-     "execution_count": 2192,
+     "execution_count": 799,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2193,
+   "execution_count": 800,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +403,7 @@
        "18800.0000000000"
       ]
      },
-     "execution_count": 2193,
+     "execution_count": 800,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2194,
+   "execution_count": 801,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +426,7 @@
        "363.333333333333"
       ]
      },
-     "execution_count": 2194,
+     "execution_count": 801,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2201,
+   "execution_count": 802,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +453,7 @@
        "2890666.66666667"
       ]
      },
-     "execution_count": 2201,
+     "execution_count": 802,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,6 +461,260 @@
    "source": [
     "# profitt for lederbedrift (Olivita):\n",
     "sp.simplify((P_opt-c)*sol[q1]-f_k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 803,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starter på oppgave 2, regner på nytt cournot for mikroøl\n",
+    "# q_g er graffi, q_b er bryggeri 13 og q_m er mack mikrobryggeri\n",
+    "\n",
+    "# regner cournot likevekt\n",
+    "q_g, q_b, q_m,c_g,c_b,c_m, a, b, f_k,c=sp.symbols('q_g q_b q_m c_g c_b c_m a b f_k c')\n",
+    "\n",
+    "a = 175\n",
+    "b = 4\n",
+    "c_g = 10\n",
+    "c_b = 10\n",
+    "c_m = 7\n",
+    "f_k = 300000\n",
+    "def P_demand(Q,a,b):\n",
+    "    return a-b*Q\n",
+    "\n",
+    "def profit(q_g,q_b,q_m,c,a,b):\n",
+    "    return (P_demand(q_g+q_b+q_m,a,b)-c)*q_g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 804,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle q_{g} \\left(- c - 4 q_{b} - 4 q_{g} - 4 q_{m} + 175\\right)$"
+      ],
+      "text/plain": [
+       "q_g*(-c - 4*q_b - 4*q_g - 4*q_m + 175)"
+      ]
+     },
+     "execution_count": 804,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profit(q_g,q_b,q_m,c,a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 805,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 4 q_{b} - 8 q_{g} - 4 q_{m} + 165$"
+      ],
+      "text/plain": [
+       "-4*q_b - 8*q_g - 4*q_m + 165"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 8 q_{b} - 4 q_{g} - 4 q_{m} + 165$"
+      ],
+      "text/plain": [
+       "-8*q_b - 4*q_g - 4*q_m + 165"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - 4 q_{b} - 4 q_{g} - 8 q_{m} + 168$"
+      ],
+      "text/plain": [
+       "-4*q_b - 4*q_g - 8*q_m + 168"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d_profit1_Q=sp.diff(profit(q_g,q_b,q_m,c_g,a,b),q_g)\n",
+    "d_profit2_Q=sp.diff(profit(q_b,q_g, q_m,c_b,a,b),q_b)\n",
+    "d_profit3_Q=sp.diff(profit(q_m,q_g,q_b,c_m,a,b),q_m)\n",
+    "\n",
+    "\n",
+    "display(d_profit1_Q)\n",
+    "display(d_profit2_Q)\n",
+    "display(d_profit3_Q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 806,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.125"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10.125"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10.875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Tallene blir i tusener\n",
+    "\n",
+    "sol=sp.solve([d_profit1_Q,d_profit2_Q,d_profit3_Q],[q_g,q_b,q_m])\n",
+    "\n",
+    "# Kvantum til Graff brygghus\n",
+    "display(float(sol[q_g]))\n",
+    "# Kvantum til Bryggeri 13\n",
+    "display(float(sol[q_b]))\n",
+    "# Kvantum til Mack mikrobryggeri\n",
+    "display(float(sol[q_m]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 807,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{101}{2}$"
+      ],
+      "text/plain": [
+       "101/2"
+      ]
+     },
+     "execution_count": 807,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def P_demand(q_g,q_b,q_m):\n",
+    "    return a-b*(q_g+q_b+q_m)\n",
+    "\n",
+    "# Optimal pris i sluttmarkedet:\n",
+    "P_opt=P_demand(q_g,q_b,q_m).subs({q_g:sol[q_g],q_b:sol[q_b],q_m:sol[q_m]})\n",
+    "\n",
+    "# simplify.doit\n",
+    "P_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 808,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{220125}{2}$"
+      ],
+      "text/plain": [
+       "220125/2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{220125}{2}$"
+      ],
+      "text/plain": [
+       "220125/2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{346125}{2}$"
+      ],
+      "text/plain": [
+       "346125/2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Husk å gange med 1000 for å finne profitt siden tall er oppgitt i tusen\n",
+    "\n",
+    "# profitt for (Graff brygghus):\n",
+    "display(sp.simplify((P_opt-c_g)*(sol[q_g]*1000)-f_k))\n",
+    "\n",
+    "# profitt for Bryggeri 13:\n",
+    "display(sp.simplify((P_opt-c_b)*(sol[q_b]*1000)-f_k))\n",
+    "\n",
+    "# profitt for Mack mikrobryggeri:\n",
+    "display(sp.simplify((P_opt-c_m)*(sol[q_m]*1000)-f_k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 810,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "173062.5"
+      ]
+     },
+     "execution_count": 810,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Fusjonerer to symmetriske cournot bedrifter\n",
+    "\n",
+    "346125/2"
    ]
   }
  ],
@@ -503,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
