--- a/Kandidatnummer_30_mappeoppgave_2_SOK_2030.tex
+++ b/Kandidatnummer_30_mappeoppgave_2_SOK_2030.tex
@@ -322,11 +322,14 @@ millioner kroner.
 \subsection{Optimal tilpasning}\label{optimal-tilpasning}
 
 Ved å bruke en stackelberg modell kan vi finne optimal tilpasning i
-markedet. Stackelberg-modellen er en sekvensiell modell hvor kvantum er
-bedriftenes handlingsvariabler. Lederbedriften (Olivita AS) tar sine
-beslutninger først og bestemmer hvor mye som produseres som maksimerer
-deres egen profitt basert på at Dr Choice AS vil tilpasse seg deres
-volum med sitt kvantum som følgerbedrift.
+markedet. Godene vi ser på er substitutter så det er derfor denne
+modellen blir brukt, siden hvis den ene bedriften øker sin produksjon
+vil den andre bedriften sin produksjon minke, derfor er det en
+kvantumskonkurranse. Stackelberg-modellen er en sekvensiell modell hvor
+kvantum er bedriftenes handlingsvariabler. Lederbedriften (Olivita AS)
+tar sine beslutninger først og bestemmer hvor mye som produseres som
+maksimerer deres egen profitt basert på at Dr Choice AS vil tilpasse seg
+deres volum med sitt kvantum som følgerbedrift.
 
 Den inverse etterspørselen i markedet er gitt ved \(P = a−b(Q_O+Q_C)\)
 hvor \(Q_O\) er antall solgte flasker med Olivita, \(Q_C\) er antall
@@ -418,19 +421,26 @@ marginalkostnader.
 Starter likt som med stackelberg og bruker samme etterspørsel og
 profittfunksjoner:
 
-\[P = a - b(Q_O+Q_C) \tag{10}\] \[\pi = Q_O(a-b(Q_C+Q_O)-c) \tag{11}\]
+\[P = a - b(Q_O+Q_C) \tag{10}\]
+
+\[\pi = Q_O(a-b(Q_C+Q_O)-c) \tag{11}\]
+
 Videre så deriverer jeg profittfunksjonene mhp \(Q_O\) og \(Q_C\):
 
 \[\frac{\partial \pi}{\partial Q_O} = a -b Q_O - b(Q_O+Q_C) -c \tag{12}\]
 \[\frac{\partial \pi}{\partial Q_C} = a -b Q_C - b(Q_O+Q_C) -c \tag{13}\]
+
 Og løser for \(Q_O\) og \(Q_C\):
 
 \[Q{_O^*} = \frac{a-c}{3b} = \frac{(990-50)}{(3 \cdot \frac{1}{60})} = 18800 \tag{14}\]
+
 \[Q{_C^*} = \frac{a-c}{3b} \frac{(990-50)}{(3 \cdot \frac{1}{60})} = 18800 \tag{15}\]
+
 Setter så inn \(Q{_O^*}\) og \(Q{_C^*}\) i etterspørselen for å finne
 optimal pris i sluttmarkedet:
 
 \[P^* = a - b(Q{_O^*}+Q{_C^*}) = 990 - \frac{1}{60}(18800+18800) = 990 - 626.666 = 363.33 \tag{16}\]
+
 Fra et samfunnsøkonomisk perspektiv så er det best for samfunnet at
 lederbedriften setter prisen først, siden det vil være større kvantum
 produsert under stackelberg (42.300) og prisen blir lavere per enhet
@@ -443,8 +453,9 @@ Lederbedriften (Olivia) vil også tjene mer på sekvensielt valg under
 stackelberg enn cournot, siden lederbedriften kan sette kvantum
 produsert først og følgerbedriften vil tilpasse seg. Dette vil føre til
 at lederbedriften vil tjene mer enn følgerbedriften siden de konkurrerer
-om kvantum solgt. Totalt vil lederbedriften tjene 3.627.000 kroner under
-stackelberg og
+om kvantum solgt.
+
+Totalt vil lederbedriften tjene 3.627.000 kroner under stackelberg og
 \((P^* -c) \cdot Q{_O^*} -f_k =(363 -50) \cdot18800 - 3000000 = 2890666\)
 kroner under cournot. Derfor vil det være en fordel for Olivita å ha
 mulighet til å gjøre sine valg før Dr Choice gjør sitt valg.
@@ -477,20 +488,22 @@ til Mack Mikrobryggeri. De faste kostnadene vil også reduseres ved
 sammenslåing av selskapene, og totalt utgjøre kr 500.000 per år for det
 fusjonerte selskapet.
 
-For å finne ut om en fusjon vil være lønnsom for markedet til
-mikrobryggeriene partene så regner vi ved cournot modell for
-assymetriske bedrifter først og ser på hva profitten blir for hvert
-bryggeri før fusjon.
+For å finne ut om en fusjon vil være lønnsom for bedriftene til
+mikrobryggeriene så regner vi ved cournot modell for assymetriske
+bedrifter først og ser på hva profitten blir for hvert bryggeri før
+fusjon.
 
 Etterspørselfunksjonen er som tidligere gitt ved:
 
 \[P = a - b(Q_G+Q_B+Q_M) \tag{17}\] Lager så en felles profittfunksjon
 for de tre bryggeriene:
 
-\[\pi = Q_G(a-b(Q_G+Q_B+Q_M)-c) \tag{18}\] Deriverer profittfunksjonen
-mhp \(Q_G\) og setter \(c_G\) = 10:
+\[\pi = Q_G(a-b(Q_G+Q_B+Q_M)-c) \tag{18}\]
+
+Deriverer profittfunksjonen mhp \(Q_G\) og setter \(c_G\) = 10:
 
 \[\frac{\partial \pi}{\partial Q_G} = a - bQ_G - b(Q_G+Q_B+Q_M) -c_G \tag{19}\]
+
 Deriverer så mhp \(Q_B\) og setter \(c_B\) = 10:
 
 \[\frac{\partial \pi}{\partial Q_B} = a - bQ_B - b(Q_G+Q_B+Q_M) -c_B \tag{20}\]
@@ -519,10 +532,10 @@ for å finne markedsprisen:
 \[P = a - b(Q_G^*+Q_B^*+Q_M^*) = 175 - 4 \cdot (10.125+10.125+10.875) = 175 - (4 \cdot 31.125)  = 175 - 124.5 = 50.5 \tag{25}\]
 Markedsprisen blir da 50.5 kr per flaske om de velger å ikke fusjonere.
 
-Setter så inn \(Q_G^*\), \(Q_B^*\) og \(Q_M^*\) i profittfunksjonen for
-Graff Brygghus, Bryggeri 13 og Mack Mikrobryggeri for å finne profitten
-for hvert bryggeri og trekker fra faste kostnader (her er kvantum ganget
-med 1000 slik at det blir direkte profitt):
+Setter så inn optimalt kvantum \(Q_G^*\), \(Q_B^*\) og \(Q_M^*\) i
+profittfunksjonen for Graff Brygghus, Bryggeri 13 og Mack Mikrobryggeri
+for å finne profitten for hvert bryggeri og trekker fra faste kostnader
+(her er kvantum ganget med 1000 slik at det blir direkte profitt):
 
 \[ \pi_G = \frac{125(a+c_b-3c_g+c_m)^2}{2b} -f_k = \frac{125(175+10-3 \cdot 10+7)^2}{2 \cdot 4} -300000 = 110062.5 \tag{26}\]
 
@@ -530,15 +543,79 @@ med 1000 slik at det blir direkte profitt):
 
 \[ \pi_m = \frac{125(a+c_b+c_g-3 \cdot c_m)^2}{2b} -f_k = \frac{125(175+10+10-3 \cdot 7)^2}{2 \cdot 4} -300000 = 173062.5 \tag{28}\]
 
-Dette forteller oss at profitten for Graff Brygghus og Bryggeri 13 blir
-110.062,5 kr og for Mack Mikrobryggeri som har lavere marginalkostnad
-blir profitten 173.062,5 kr.
+Dette forteller oss at profitten for Graff Brygghus blir 110.062,5 kr og
+før fusjon vil Bryggeri 13 og Mack Mikrobryggeri få en summert profitt
+på 283.125 kr.
 
-\subsection{a) Vil en slik fusjon være lønnsom for de fusjonerte
-partene?}\label{a-vil-en-slik-fusjon-vuxe6re-luxf8nnsom-for-de-fusjonerte-partene}
+\clearpage
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\tightlist
+\item
+  Vil en slik fusjon være lønnsom for de fusjonerte partene?
+\end{enumerate}
+
+\subsection{Markedet for mikroøl etter
+fusjon}\label{markedet-for-mikrouxf8l-etter-fusjon}
 
 Videre skal vi nå regne og se om en fusjon blir å være lønnsom for Mack
-Mikrobryggeri og Bryggeri 13.
+Mikrobryggeri og Bryggeri 13. Her brukes det fortsatt en cournot modell
+med assymetriske bedrifter.
+
+Etterspørselfunksjonen etter fusjon blir nå:
+
+\[P = a - b(Q_G+Q_{bm})-c \tag{29}\]
+
+Deriverer så mhp \(Q_{G}\) og setter marginalkostnaden \(c_{G}\) = 10:
+
+\[\frac{\partial \pi}{\partial Q_G} = a - b Q_G - b(Q_BM+Q_G) -c_G \tag{30}\]
+
+Deriverer så mhp \(Q_{bm}\) og setter marginalkostnaden \(c_{bm}\) = 7:
+
+\[\frac{\partial \pi}{\partial Q_{bm}} = a - bQ_{bm} - b(Q_{bm}+Q_G) -c_{bm} \tag{31}\]
+
+Løser så for optimalt kvantum for alle Graff og de to fusjonerte
+bedriftene \(Q_G^*\), \(Q_{bm}^*\) ved å sette
+\(\frac{\partial \pi}{\partial Q_G} = 0\) og
+\(\frac{\partial \pi}{\partial Q_{bm}} = 0\) i tusener:
+
+\[Q_G^* = \frac{a + c_{bm} -2 c_g }{3b} = \frac{175 + 7 -2 \cdot 10}{3 \cdot4} = 13.5 \tag{32}\]
+
+\[Q_{bm}^* = \frac{a -2 \cdot c_{bm}+c_g }{3b} = \frac{175 -2 \cdot 7 + 10}{3 \cdot4} = 14.25 \tag{33}\]
+
+Dette forteller oss at det optimale kvantum for Graff Brygghus blir 13.5
+tusen flasker og for de to fusjonerte bedriftene blir kvantumet 14.25
+tusen flasker etter fusjon.
+
+Setter så inn \(Q_G^*\) og \(Q_{bm}^*\) i etterspørselfunksjonen for å
+finne markedsprisen:
+
+\[P = a - b(Q_G^*+Q_{bm}^*) = 175 - b \cdot (13.5 + 14.25) = 175 - (4 \cdot 27.75)  = 175 - 111 = 64 \tag{34}\]
+Markedsprisen blir da 64 kr per flaske om de velger å fusjonere.
+
+Setter så inn optimalt kvantum \(Q_G^*\) og \(Q_{bm}^*\) i
+profittfunksjonen for Graff Brygghus, og den fusjonerte bedriften for å
+finne profitten for hvert bryggeri og trekker fra faste kostnader (her
+er kvantum ganget med 1000 slik at det blir direkte profitt):
+
+\[ \pi_G = \frac{1000(a+c_{bm}-2c_g)^2}{9b} -f_k = \frac{1000(175+7 - 2 \cdot 10)^2}{9 \cdot 4} -300000 = 429000 \tag{35}\]
+
+\[ \pi_{bm} = \frac{1000(a-2c_{bm}+c_g)^2}{9b} -f_{kbm} = \frac{1000(175-2 \cdot 7+10)^2}{9 \cdot 4} -500000 = 312250 \tag{36}\]
+
+Dette forteller oss at profitten etter fusjon for Graff Brygghus blir
+429.000 kr og for de fusjonerte bedriftene blir profitten på 312.250 kr.
+
+Fusjonsparadokset slår til her og det er Graff Brygghus som tjener mest
+med en økning fra 110.062,5 kr til 429.000 kr i profitt. Før fusjonen
+hadde Bryggeri 13 og Mack Mikrobryggeri en profitt på 283.125 kr og
+etter fusjonen øker den til 312.250 kr. Fusjonen vil være lønnsom for de
+fusjonerte partene, dog ikke like mye som for Graff Brygghus.
+
+Samfunnsøkonomisk blir kvantumet etter fusjonen å gå ned fra 31.125 til
+27.75 tusen flasker og prisen per flaske øker fra 50.5 til 64 kr. Dette
+vil føre til at det blir produsert mindre mikroøl i markedet og prisen
+per flaske vil øke.
 
 Videre i oppgaven skal vi anta at fusjon mellom Mack Mikrobryggeri og
 Bryggeri 13 blir gjennomført, og det nye selskapet vil operere under
@@ -571,13 +648,18 @@ og Graff Brygghus. Analysen skal omfatte en vurdering av dagens
 markedstilpasning og en sammenligning med tilpasningen etter en
 eventuell fusjon i oppstrømsmarkedet.
 
-\subsection{b) Basert på din analyse, vil du anbefale styret i Mack
-Mikrobrygg 13 å gjennomføre fusjon med Graff
-Brygghus?}\label{b-basert-puxe5-din-analyse-vil-du-anbefale-styret-i-mack-mikrobrygg-13-uxe5-gjennomfuxf8re-fusjon-med-graff-brygghus}
+\clearpage
 
-\subsection{c) Hva blir de samfunnsøkonomiske konsekvensene av en fusjon
-mellom Mack Mikrobrygg 13 og Graff
-Brygghus.}\label{c-hva-blir-de-samfunnsuxf8konomiske-konsekvensene-av-en-fusjon-mellom-mack-mikrobrygg-13-og-graff-brygghus.}
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\setcounter{enumi}{1}
+\item
+  Basert på din analyse, vil du anbefale styret i Mack Mikrobrygg 13 å
+  gjennomføre fusjon med Graff Brygghus?
+\item
+  Hva blir de samfunnsøkonomiske konsekvensene av en fusjon mellom Mack
+  Mikrobrygg 13 og Graff Brygghus.
+\end{enumerate}
 
 \clearpage
 
@@ -809,12 +891,13 @@ $\displaystyle 2890666.66666667$
 \CommentTok{\# q\_g er graffi, q\_b er bryggeri 13 og q\_m er mack mikrobryggeri}
 
 \CommentTok{\# regner cournot likevekt}
-\NormalTok{q\_g, q\_b, q\_m,c1,c2, a, b, f\_k}\OperatorTok{=}\NormalTok{sp.symbols(}\StringTok{\textquotesingle{}q\_g q\_b q\_m c1 c2 a b f\_k\textquotesingle{}}\NormalTok{)}
+\NormalTok{q\_g, q\_b, q\_m,c\_g,c\_b,c\_m, a, b, f\_k,c}\OperatorTok{=}\NormalTok{sp.symbols(}\StringTok{\textquotesingle{}q\_g q\_b q\_m c\_g c\_b c\_m a b f\_k c\textquotesingle{}}\NormalTok{)}
 
 \NormalTok{a }\OperatorTok{=} \DecValTok{175}
 \NormalTok{b }\OperatorTok{=} \DecValTok{4}
-\NormalTok{c1 }\OperatorTok{=} \DecValTok{7}
-\NormalTok{c2 }\OperatorTok{=} \DecValTok{10}
+\NormalTok{c\_g }\OperatorTok{=} \DecValTok{10}
+\NormalTok{c\_b }\OperatorTok{=} \DecValTok{10}
+\NormalTok{c\_m }\OperatorTok{=} \DecValTok{7}
 \NormalTok{f\_k }\OperatorTok{=} \DecValTok{300000}
 \KeywordTok{def}\NormalTok{ P\_demand(Q,a,b):}
     \ControlFlowTok{return}\NormalTok{ a}\OperatorTok{{-}}\NormalTok{b}\OperatorTok{*}\NormalTok{Q}
@@ -826,9 +909,9 @@ $\displaystyle 2890666.66666667$
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{d\_profit1\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_g,q\_b,q\_m,c2,a,b),q\_g)}
-\NormalTok{d\_profit2\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_b,q\_g, q\_m,c2,a,b),q\_b)}
-\NormalTok{d\_profit3\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_m,q\_g,q\_b,c1,a,b),q\_m)}
+\NormalTok{d\_profit1\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_g,q\_b,q\_m,c\_g,a,b),q\_g)}
+\NormalTok{d\_profit2\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_b,q\_g, q\_m,c\_b,a,b),q\_b)}
+\NormalTok{d\_profit3\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_m,q\_g,q\_b,c\_m,a,b),q\_m)}
 
 
 \NormalTok{display(d\_profit1\_Q)}
@@ -845,14 +928,16 @@ $\displaystyle - 4 q_{b} - 4 q_{g} - 8 q_{m} + 168$
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\CommentTok{\# Tallene blir i tusener}
+
 \NormalTok{sol}\OperatorTok{=}\NormalTok{sp.solve([d\_profit1\_Q,d\_profit2\_Q,d\_profit3\_Q],[q\_g,q\_b,q\_m])}
 
 \CommentTok{\# Kvantum til Graff brygghus}
-\NormalTok{display(sol[q\_g])}
+\NormalTok{display((sol[q\_g]))}
 \CommentTok{\# Kvantum til Bryggeri 13}
-\NormalTok{display(sol[q\_b])}
+\NormalTok{display((sol[q\_b]))}
 \CommentTok{\# Kvantum til Mack mikrobryggeri}
-\NormalTok{display(sol[q\_m])}
+\NormalTok{display((sol[q\_m]))}
 \end{Highlighting}
 \end{Shaded}
 
@@ -869,6 +954,7 @@ $\displaystyle \frac{87}{8}$
 
 \CommentTok{\# Optimal pris i sluttmarkedet:}
 \NormalTok{P\_opt}\OperatorTok{=}\NormalTok{P\_demand(q\_g,q\_b,q\_m).subs(\{q\_g:sol[q\_g],q\_b:sol[q\_b],q\_m:sol[q\_m]\})}
+
 \NormalTok{P\_opt}
 \end{Highlighting}
 \end{Shaded}
@@ -880,27 +966,120 @@ $\displaystyle \frac{101}{2}$
 \CommentTok{\# Husk å gange med 1000 for å finne profitt siden tall er oppgitt i tusen}
 
 \CommentTok{\# profitt for (Graff brygghus):}
-\NormalTok{display(}\BuiltInTok{float}\NormalTok{((P\_opt}\OperatorTok{{-}}\NormalTok{c2)}\OperatorTok{*}\NormalTok{(sol[q\_g]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k))}
-
+\NormalTok{Graff}\OperatorTok{=}\NormalTok{ sp.simplify((P\_opt}\OperatorTok{{-}}\NormalTok{c\_g)}\OperatorTok{*}\NormalTok{(sol[q\_g]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k)}
+\NormalTok{display(Graff)}
 \CommentTok{\# profitt for Bryggeri 13:}
-\NormalTok{display(}\BuiltInTok{float}\NormalTok{((P\_opt}\OperatorTok{{-}}\NormalTok{c2)}\OperatorTok{*}\NormalTok{(sol[q\_b]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k))}
+\NormalTok{Bryggeri\_13}\OperatorTok{=}\NormalTok{ sp.simplify((P\_opt}\OperatorTok{{-}}\NormalTok{c\_b)}\OperatorTok{*}\NormalTok{(sol[q\_b]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k)}
 
 \CommentTok{\# profitt for Mack mikrobryggeri:}
-\NormalTok{display(}\BuiltInTok{float}\NormalTok{((P\_opt}\OperatorTok{{-}}\NormalTok{c1)}\OperatorTok{*}\NormalTok{(sol[q\_m]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k))}
+\NormalTok{Mack }\OperatorTok{=}\NormalTok{ sp.simplify((P\_opt}\OperatorTok{{-}}\NormalTok{c\_m)}\OperatorTok{*}\NormalTok{(sol[q\_m]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k)}
+
+\NormalTok{display(Bryggeri\_13)}
+\NormalTok{display(Mack)}
+
+\CommentTok{\#Profitt for bryggeri 13 og mack før fusjon}
+\NormalTok{Mack}\OperatorTok{+}\NormalTok{Bryggeri\_13}
+\end{Highlighting}
+\end{Shaded}
+
+$\displaystyle \frac{220125}{2}$
+
+$\displaystyle \frac{220125}{2}$
+
+$\displaystyle \frac{346125}{2}$
+
+$\displaystyle 283125$
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# Fusjonerer to asymmetriske cournot bedrifter Mack mikrobryggeri og Bryggeri 13}
+
+\CommentTok{\# Oppgave 2a}
+\CommentTok{\# q\_g er kvantum til Graff brygghus}
+\CommentTok{\# q\_bm blir kvantum til den fusjonerte bedriften}
+\CommentTok{\# ny fk for den fusjonerte bedriften blir 500 000}
+
+\CommentTok{\# regner cournot likevekt}
+\NormalTok{q\_g, q\_bm,c\_g,c\_bm, a, b, f\_k,c, f\_k\_bm}\OperatorTok{=}\NormalTok{sp.symbols(}\StringTok{\textquotesingle{}q\_g q\_bm c\_g c\_bm a b f\_k c f\_k\_bm\textquotesingle{}}\NormalTok{)}
+
+\NormalTok{a }\OperatorTok{=} \DecValTok{175}
+\NormalTok{b }\OperatorTok{=} \DecValTok{4}
+\NormalTok{c\_g }\OperatorTok{=} \DecValTok{10}
+\NormalTok{c\_bm }\OperatorTok{=} \DecValTok{7}
+\NormalTok{f\_k }\OperatorTok{=} \DecValTok{300000}
+\NormalTok{f\_k\_bm }\OperatorTok{=} \DecValTok{500000}
+\KeywordTok{def}\NormalTok{ P\_demand(Q,a,b):}
+    \ControlFlowTok{return}\NormalTok{ a}\OperatorTok{{-}}\NormalTok{b}\OperatorTok{*}\NormalTok{Q}
+
+\KeywordTok{def}\NormalTok{ profit(q\_g,q\_bm,c,a,b):}
+    \ControlFlowTok{return}\NormalTok{ (P\_demand(q\_g}\OperatorTok{+}\NormalTok{q\_bm,a,b)}\OperatorTok{{-}}\NormalTok{c)}\OperatorTok{*}\NormalTok{q\_g}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{d\_profit1\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_g,q\_bm,c\_g,a,b),q\_g)}
+\NormalTok{d\_profit2\_Q}\OperatorTok{=}\NormalTok{sp.diff(profit(q\_bm,q\_g,c\_bm,a,b),q\_bm)}
+
+
+\NormalTok{display(d\_profit1\_Q)}
+\NormalTok{display(d\_profit2\_Q)}
+\end{Highlighting}
+\end{Shaded}
+
+$\displaystyle - 4 q_{bm} - 8 q_{g} + 165$
+
+$\displaystyle - 8 q_{bm} - 4 q_{g} + 168$
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# Kvantum er i tusener}
+
+\NormalTok{sol}\OperatorTok{=}\NormalTok{sp.solve([d\_profit1\_Q,d\_profit2\_Q],[q\_g,q\_bm])}
+
+\CommentTok{\# Kvantum til Graff brygghus}
+\NormalTok{display(}\BuiltInTok{float}\NormalTok{(sol[q\_g]))}
+\CommentTok{\# Kvantum til fusjonert bedrift}
+\NormalTok{display(}\BuiltInTok{float}\NormalTok{(sol[q\_bm]))}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
-110062.5
+13.5
 \end{verbatim}
 
 \begin{verbatim}
-110062.5
+14.25
 \end{verbatim}
 
-\begin{verbatim}
-173062.5
-\end{verbatim}
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{def}\NormalTok{ P\_demand(q\_g,q\_bm):}
+    \ControlFlowTok{return}\NormalTok{ a}\OperatorTok{{-}}\NormalTok{b}\OperatorTok{*}\NormalTok{(q\_g}\OperatorTok{+}\NormalTok{q\_bm)}
+
+\CommentTok{\# Optimal pris i sluttmarkedet:}
+\NormalTok{P\_opt}\OperatorTok{=}\NormalTok{P\_demand(q\_g,q\_bm).subs(\{q\_g:sol[q\_g],q\_bm:sol[q\_bm]\})}
+
+\CommentTok{\# Optimal sluttpris }
+\NormalTok{P\_opt}
+\end{Highlighting}
+\end{Shaded}
+
+$\displaystyle 64$
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\# profitt for (Graff brygghus):}
+\NormalTok{display(sp.simplify((P\_opt}\OperatorTok{{-}}\NormalTok{c\_g)}\OperatorTok{*}\NormalTok{(sol[q\_g]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k))}
+
+\CommentTok{\# profitt for fusjonert bedrift}
+\NormalTok{display(sp.simplify((P\_opt}\OperatorTok{{-}}\NormalTok{c\_bm)}\OperatorTok{*}\NormalTok{(sol[q\_bm]}\OperatorTok{*}\DecValTok{1000}\NormalTok{)}\OperatorTok{{-}}\NormalTok{f\_k\_bm))}
+\end{Highlighting}
+\end{Shaded}
+
+$\displaystyle 429000$
+
+$\displaystyle 312250$
 
 
 
